--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-667.1KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-326.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.20MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-346.5KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
   - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-692.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.04MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 捷克-467.8KB/s(Youtube:不良林), server: t03.ssrsub.com, port: 18443, type: trojan, password: 2256dea6-b952-43f7-b8a2-983f766d5836, sni: t03.ssrsub.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15045, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-269.9KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 🇨🇳 台湾-1.70MB/s(Youtube:不良林), server: v2bww2.azzhuangaping.tw, port: 80, type: vmess, uuid: 992730fc-b237-43ed-a35a-1c5d3f4282b6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2bww2.azzhuangaping.tw}}
+  - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: bbdff6a8-2e22-4d37-a4ab-a038bc646bd9, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.57MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-1.95MB/s(Youtube:不良林), server: bgj.azzhuangaping.tw, port: 80, type: vmess, uuid: 992730fc-b237-43ed-a35a-1c5d3f4282b6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: bgj.azzhuangaping.tw}}
+  - {name: 🇭🇰 香港-9.63MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 捷克-467.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 捷克-467.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 捷克-467.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 捷克-467.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 捷克-467.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 捷克-467.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 捷克-467.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
