--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-346.5KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-692.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15045, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-269.9KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
-  - {name: 🇨🇳 台湾-1.70MB/s(Youtube:不良林), server: v2bww2.azzhuangaping.tw, port: 80, type: vmess, uuid: 992730fc-b237-43ed-a35a-1c5d3f4282b6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2bww2.azzhuangaping.tw}}
-  - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: bbdff6a8-2e22-4d37-a4ab-a038bc646bd9, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.57MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-1.95MB/s(Youtube:不良林), server: bgj.azzhuangaping.tw, port: 80, type: vmess, uuid: 992730fc-b237-43ed-a35a-1c5d3f4282b6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: bgj.azzhuangaping.tw}}
-  - {name: 🇭🇰 香港-9.63MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
+  - {name: 🇭🇰 香港-306.2KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20720, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-623.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20748, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-165.9KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-485.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-758.5KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-732.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1006.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20741, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-745.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-637.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20743, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
