--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-306.2KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20720, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-623.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20748, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-165.9KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-485.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-758.5KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-732.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1006.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20741, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-745.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-637.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20743, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 匈牙利-1.07MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-236.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-711.8KB/s(Youtube:不良林), server: HJ001.xiba1.xyz, port: 20762, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: HJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-404.8KB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
+      - 匈牙利-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
+      - 匈牙利-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
+      - 匈牙利-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
+      - 匈牙利-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
+      - 匈牙利-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
+      - 匈牙利-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-623.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-165.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-758.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.8KB/s(Youtube:不良林)
+      - 匈牙利-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
